# TypeGPT

./: .gitignore  CODE_OF_CONDUCT.md  README.md  TypeGPT.py  api_calls.py  apicalls.py  install.sh  keys.example.txt  keys.txt  pyproject.toml  requirements.txt  run.sh  system_prompt.txt  textfieldgpt.py  typegpt_gui.py
.github/: CONTRIBUTING.md  SECURITY.md
config/: .env  system_prompt.txt
myenv/: pyvenv.cfg
scripts/: install.sh  run.sh
source/: pyvenv.cfg
src/: api_calls.py  main.py  typegpt.py
